Fixed text alignment in the Featured Content block on the home page

--- a/docroot/profiles/drupal_commons/themes/commons_origins/css/commons_origins-style.css
+++ b/docroot/profiles/drupal_commons/themes/commons_origins/css/commons_origins-style.css
@@ -3082,6 +3082,10 @@ margin: 0px 10px 10px;
 	font-style: italic;
 }
 
+/* This is a bit of a hack by Jay (a non-themer) to make this block have text line up correctly.  TNT should fix this the "right" way at some point. */
+.view-homepage-recent-featured .views-field-created,
+.view-homepage-recent-featured .views-field-name {float: right; width: 218px;}
+
 .view-content-global-documents .views-field-field-file-fid .filefield-file,
 .view-content-global-documents .views-field-field-file-fid .filefield-file a {
 	margin-right: 10px;
